force-app/main/default/objects/redwing__Learning_Category_Account__c/redwing__Learning_Category_Account__c.object-meta.xml
<CustomObject>
    <label>Catalog Account (Obsolete)</label>
    <nameField>
        <displayFormat>CAA-{0000000}</displayFormat>
        <label>Catalog Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Catalog Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>