force-app/main/default/objects/redwing__Learning_Category_Account__c/fields/redwing__Account__c.field-meta.xml
<CustomField>
    <fullName>redwing__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Catalogs</relationshipLabel>
    <relationshipName>Learning_Category_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>