force-app/main/default/objects/redwing__Learning_Category_Account__c/fields/redwing__Enable_Catalog_Training_Tracks__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Catalog_Training_Tracks__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this option if you want to enable all Learning Tracs associated to this Catalog for the specified Account</inlineHelpText>
    <label>Enable Catalog Learning Tracs</label>
    <type>Checkbox</type>
</CustomField>