force-app/main/default/objects/redwing__Learning_Category_Account__c/fields/redwing__Learning_Category__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog</label>
    <referenceTo>redwing__Learning_Category__c</referenceTo>
    <relationshipLabel>Catalog Accounts</relationshipLabel>
    <relationshipName>Learning_Category_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>